# ScienceTycoonDemon

./: .gitmodules  3  :w  CMakeCache.txt  CMakeLists.txt  GUI (2).tar  Game_menu.cpp  Main  Main gui.c  Main.cpp  Makefile  README.md  Sav.cpp.h  SaveData.cpp  Savings.cpp  Scene.cpp  SciTycoonLinux.tar  Structs.cpp  TechTree2.0.c  TechTree2.0.cpp  Utils.cpp  buildObj.h  buildObj.hpp  cmake_install.cmake  hero.cpp  layout_tech.rgl  layout_tech_tree.c  selectionBtn.cpp  selectionInfo.cpp  tables for game.7z  techprogressHUD.cpp
GUI/NameGame/: Title.aseprite
GUI/Tree/: Tree.aseprite
GUI/background/: Atom.aseprite
GUI/gui menu/: button.aseprite
GUI/menu/: Sprite-0009.aseprite
GameLinux/: Main
GameLinux/GUI/exit button/: button.aseprite
GameLinux/shared/linux/: libraylib.so.5.0.0
GameLinux/src/location/laboratory/Tiles/: TiledMapLAboratory.json
include/: rshapes.c
include/stopwatch/: Stopwatch.hpp
lib/Новая папка/: raylib.h.gch
src/: computer.aseprite  text.tar
src/location/laboratory/: TiledMapLAboratory.tmx
src/location/laboratory/Tiles/: JsonDataPath.json  TiledMapLAboratory.json  jsonFloor.json  jsonWall.json
text/: helptext.json
